[gd_scene load_steps=8 format=3 uid="uid://4mjenqrgsred"]

[ext_resource type="Texture2D" uid="uid://bfphj5pvyurap" path="res://Assets/Picable/NoteIcon.png" id="1_efug3"]
[ext_resource type="Script" path="res://Scripts/NoteObject.gd" id="1_ucri6"]
[ext_resource type="AudioStream" uid="uid://dlw2w7cyetaq3" path="res://Audio/10_UI_Menu_SFX/051_use_item_01.wav" id="3_d3xst"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7qtlk"]
size = Vector2(19, 19)

[sub_resource type="Animation" id="Animation_qds3q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NoteIcon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_eq2jv"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NoteIcon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, -2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y7v06"]
_data = {
"RESET": SubResource("Animation_qds3q"),
"idle": SubResource("Animation_eq2jv")
}

[node name="Note" type="Node2D"]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 9
collision_priority = 0.0
script = ExtResource("1_ucri6")
pickable_type = "note"

[node name="NoteHitbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2.5, 0.5)
shape = SubResource("RectangleShape2D_7qtlk")

[node name="NoteIcon" type="Sprite2D" parent="Area2D"]
position = Vector2(1, 1)
texture = ExtResource("1_efug3")

[node name="IconAnimator" type="AnimationPlayer" parent="Area2D"]
libraries = {
"": SubResource("AnimationLibrary_y7v06")
}

[node name="GotSound" type="AudioStreamPlayer2D" parent="Area2D"]
stream = ExtResource("3_d3xst")

[node name="GotTimer" type="Timer" parent="Area2D"]
wait_time = 0.75
one_shot = true

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
